objects/PRC_Media_Event__c.object
<CustomObject>
    <label>Media Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>PRC_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Show</fullName>
                </value>
                <value>
                    <fullName>Boutique Program</fullName>
                </value>
                <value>
                    <fullName>Concourse Event</fullName>
                </value>
                <value>
                    <fullName>Global Drive</fullName>
                </value>
                <value>
                    <fullName>Out of Show Event</fullName>
                </value>
                <value>
                    <fullName>U.S. Drive</fullName>
                </value>
                <value>
                    <fullName>Vehicle Launch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRC_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRC_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRC_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PRC_Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRC_Vehicles__c</fullName>
        <label>Vehicles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E-PACE</fullName>
                </value>
                <value>
                    <fullName>F-PACE</fullName>
                </value>
                <value>
                    <fullName>I-PACE</fullName>
                </value>
                <value>
                    <fullName>F-TYPE</fullName>
                </value>
                <value>
                    <fullName>F-TYPE Project 7</fullName>
                </value>
                <value>
                    <fullName>S-TYPE</fullName>
                </value>
                <value>
                    <fullName>XE</fullName>
                </value>
                <value>
                    <fullName>XE SV Project 8</fullName>
                </value>
                <value>
                    <fullName>XF</fullName>
                </value>
                <value>
                    <fullName>XF Sportbrake</fullName>
                </value>
                <value>
                    <fullName>XJ</fullName>
                </value>
                <value>
                    <fullName>XJS</fullName>
                </value>
                <value>
                    <fullName>XK</fullName>
                </value>
                <value>
                    <fullName>X-TYPE</fullName>
                </value>
                <value>
                    <fullName>Defender</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Discovery Series I</fullName>
                </value>
                <value>
                    <fullName>Discovery Series II</fullName>
                </value>
                <value>
                    <fullName>Discovery Sport</fullName>
                </value>
                <value>
                    <fullName>Freelander</fullName>
                </value>
                <value>
                    <fullName>LR2</fullName>
                </value>
                <value>
                    <fullName>LR3</fullName>
                </value>
                <value>
                    <fullName>LR4</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Range Rover</fullName>
                </value>
                <value>
                    <fullName>Range Rover SV Coupe</fullName>
                </value>
                <value>
                    <fullName>Range Rover Classic</fullName>
                </value>
                <value>
                    <fullName>Range Rover Evoque</fullName>
                </value>
                <value>
                    <fullName>Range Rover Evoque Convertible</fullName>
                </value>
                <value>
                    <fullName>Range Rover Sport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRC_Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Show</fullName>
                </value>
                <value>
                    <fullName>Equestrian</fullName>
                </value>
                <value>
                    <fullName>Sailing</fullName>
                </value>
                <value>
                    <fullName>Tech Incubator</fullName>
                </value>
                <value>
                    <fullName>Micro Program</fullName>
                </value>
                <value>
                    <fullName>Domestic Drive Program</fullName>
                </value>
                <value>
                    <fullName>Global Drive Program</fullName>
                </value>
                <value>
                    <fullName>Out of Show Event</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRC_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <recordTypes>
        <fullName>PR_Contact_Management</fullName>
        <active>true</active>
        <label>PR Contact Management</label>
    </recordTypes>
    <validationRules>
        <fullName>Event_Start_Date</fullName>
        <active>true</active>
        <description>Event Start Date must be less than or Equal to Event End Date</description>
        <errorConditionFormula>PRC_Start_Date__c  &gt;=  PRC_End_Date__c</errorConditionFormula>
        <errorMessage>Start Date must be less than or Equal to End Date</errorMessage>
    </validationRules>
</CustomObject>